# stargazer

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml
.github/workflows/: update.yml
data/: taxonomy.json
stargazer/: auditor.py  classifier.py  cli.py  fetcher.py  github_lists.py  rate_limiter.py  renderer.py  taxonomy.py
tests/: test_auditor.py  test_classifier.py  test_fetcher.py  test_github_lists.py  test_rate_limiter.py  test_renderer.py  test_taxonomy.py
