[project]
name = "stargazer"
version = "0.1.0"
description = "Auto-sorting CLI for GitHub starred repos"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
stargazer = "stargazer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
